Deploy updated frontend with user profile persistence

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
         <section class="profile-container">
             <div class="account-card">
                 <div class="profile-section">
-                    <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture" class="profile-pic">
+                    <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture" class="profile-pic" onerror="this.src='images/default-profile.png'">
                 </div>
                 <div class="info-section">
                     <h3 id="username">Welcome, User!</h3>
@@ -62,7 +62,6 @@
                         <button onclick="window.location.href='race_directory.html'">Find a Race</button>
                     </div>
                 </div>
-                <!-- Add more carousel items as needed -->
             </div>
         </div>
 
