--- a/frontend/account.html
+++ b/frontend/account.html
@@ -62,10 +62,9 @@
     </footer>
 
     <script>
+        // Fetch account information and load profile picture
         async function fetchAccountInfo() {
-            let token = localStorage.getItem('token')?.trim();
-            console.log("Token sent with request:", token);
-
+            const token = localStorage.getItem('token')?.trim();
             if (!token) {
                 alert("You are not logged in. Redirecting to login...");
                 window.location.href = 'login.html';
@@ -87,39 +86,34 @@
                     document.getElementById('email').innerHTML = `<strong>Email:</strong> ${user.email}`;
                     if (user.profilePicture) {
                         document.getElementById('profile-pic').src = user.profilePicture;
+                        localStorage.setItem('profilePicture', user.profilePicture); // Persist profile picture
                     }
                 } else {
                     console.error("Error fetching account info:", await response.text());
-                    alert("Error fetching account info. Redirecting to login...");
+                    alert("Session expired. Redirecting to login...");
                     localStorage.removeItem('token');
                     window.location.href = 'login.html';
                 }
             } catch (error) {
                 console.error("Error fetching account info:", error);
-                alert("An unexpected error occurred while fetching account info.");
+                alert("An unexpected error occurred.");
             }
         }
 
+        // Handle profile picture upload
         document.getElementById('upload-input').addEventListener('change', async (e) => {
             const file = e.target.files[0];
-            if (!file) {
-                console.log("No file selected");
-                return;
-            }
+            if (!file) return;
 
             const formData = new FormData();
             formData.append('profilePicture', file);
 
-            let token = localStorage.getItem('token')?.trim();
+            const token = localStorage.getItem('token')?.trim();
             if (!token) {
-                alert("You are not logged in. Redirecting to login...");
+                alert("Session expired. Redirecting to login...");
                 window.location.href = 'login.html';
                 return;
             }
-
-            // Sanitize the token
-            token = token.replace(/[\r\n\t\f\v ]+/g, '').trim();
-            console.log("Sanitized token used for upload:", token);
 
             try {
                 const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
@@ -131,25 +125,34 @@
                 if (response.ok) {
                     const { profilePicture } = await response.json();
                     document.getElementById('profile-pic').src = profilePicture;
+                    localStorage.setItem('profilePicture', profilePicture); // Persist profile picture
                     document.getElementById('upload-message').textContent = "Profile picture updated successfully!";
                 } else {
-                    const errorData = await response.json();
-                    console.error("Error uploading profile picture:", errorData);
-                    document.getElementById('upload-message').textContent = "Error uploading profile picture.";
+                    console.error("Error uploading profile picture:", await response.text());
+                    document.getElementById('upload-message').textContent = "Failed to upload profile picture.";
                 }
             } catch (error) {
                 console.error("Error uploading profile picture:", error);
-                document.getElementById('upload-message').textContent = "An unexpected error occurred while uploading the profile picture.";
+                document.getElementById('upload-message').textContent = "An unexpected error occurred.";
             }
         });
 
+        // Log out and clear local storage
         document.getElementById('logout-button').addEventListener('click', () => {
             localStorage.removeItem('token');
+            localStorage.removeItem('profilePicture');
             alert("You have successfully logged out.");
             window.location.href = 'login.html';
         });
 
-        fetchAccountInfo();
+        // Reload persisted profile picture on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            const storedProfilePicture = localStorage.getItem('profilePicture');
+            if (storedProfilePicture) {
+                document.getElementById('profile-pic').src = storedProfilePicture;
+            }
+            fetchAccountInfo();
+        });
     </script>
 </body>
 </html>
