--- a/frontend/login.html
+++ b/frontend/login.html
@@ -55,13 +55,26 @@
     </footer>
 
     <script>
+        // Check if the user is already logged in
+        document.addEventListener("DOMContentLoaded", () => {
+            const token = localStorage.getItem("token");
+            if (token) {
+                window.location.href = "index.html"; // Redirect to home if logged in
+            }
+        });
+
         document.getElementById('login-form').addEventListener('submit', async (e) => {
             e.preventDefault();
             const email = document.getElementById('email').value.trim();
             const password = document.getElementById('password').value.trim();
+            const loginMessage = document.getElementById('login-message');
+
+            // Clear previous messages
+            loginMessage.textContent = '';
+            loginMessage.className = '';
 
             if (!email || !password) {
-                document.getElementById('login-message').textContent = 'Please fill in both fields.';
+                loginMessage.textContent = 'Please fill in both fields.';
                 return;
             }
 
@@ -78,16 +91,21 @@
 
                 if (response.ok && data.token) {
                     localStorage.setItem('token', data.token);
-                    document.getElementById('login-message').textContent = 'Login successful!';
-                    document.getElementById('login-message').classList.add('success-message');
+                    loginMessage.textContent = 'Login successful!';
+                    loginMessage.classList.add('success-message');
+
+                    // Redirect to home page after a short delay
                     setTimeout(() => {
                         window.location.href = 'index.html';
-                    }, 2000);
+                    }, 1500);
                 } else {
-                    document.getElementById('login-message').textContent = data.message || 'Invalid login credentials.';
+                    loginMessage.textContent = data.message || 'Invalid login credentials.';
+                    loginMessage.classList.add('error-message');
                 }
             } catch (error) {
-                document.getElementById('login-message').textContent = 'Error: Could not log in.';
+                console.error("Login error:", error);
+                loginMessage.textContent = 'Error: Could not connect to the server.';
+                loginMessage.classList.add('error-message');
             }
         });
     </script>
