--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header class="sticky-header">
         <div class="logo-container">
             <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
@@ -28,6 +29,7 @@
         </nav>
     </header>
 
+    <!-- Main Section -->
     <main>
         <!-- Profile Section -->
         <section class="profile-container">
@@ -45,7 +47,7 @@
         <!-- Carousel Section -->
         <div class="carousel">
             <div class="carousel-inner">
-                <!-- Carousel items -->
+                <!-- Carousel Items -->
                 <div class="carousel-item active">
                     <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run">
                     <div class="carousel-overlay">
@@ -62,7 +64,34 @@
                         <button onclick="window.location.href='race_directory.html'">Find a Race</button>
                     </div>
                 </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail">
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Explore running adventures through beautiful landscapes!</p>
+                        <button onclick="window.location.href='race_directory.html'">Explore Now</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download4_ultramarathon.jpg" alt="Desert Trail">
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Conquer challenging terrains and elevate your training!</p>
+                        <button onclick="window.location.href='training_tips.html'">Start Training</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download5_ultramarathon.jpg" alt="Snowy Trail">
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Push your limits and embrace the ultramarathon journey.</p>
+                        <button onclick="window.location.href='community.html'">Join the Community</button>
+                    </div>
+                </div>
             </div>
+            <!-- Navigation Buttons -->
+            <button class="carousel-prev">&lt;</button>
+            <button class="carousel-next">&gt;</button>
         </div>
 
         <!-- Features Section -->
@@ -85,6 +114,7 @@
         </section>
     </main>
 
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Ultramarathon Finder. All rights reserved.</p>
         <p>
@@ -96,61 +126,7 @@
         </p>
     </footer>
 
-    <script>
-        // Fetch and update user information dynamically
-        async function loadProfileInfo() {
-            const token = localStorage.getItem('token');
-            const accountTab = document.getElementById("account-tab");
-
-            if (!token) {
-                document.getElementById('username').textContent = 'Welcome, Guest!';
-                document.getElementById('email').textContent = '';
-                document.getElementById('profile-pic').src = 'images/default-profile.png';
-                accountTab.innerHTML = `
-                    <a href="login.html">Login</a>
-                    <a href="register.html">Register</a>
-                `;
-                return;
-            }
-
-            try {
-                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
-                    method: 'GET',
-                    headers: {
-                        Authorization: `Bearer ${token}`,
-                        'Content-Type': 'application/json',
-                    },
-                });
-
-                if (response.ok) {
-                    const { user } = await response.json();
-                    document.getElementById('username').textContent = `Welcome, ${user.username}!`;
-                    document.getElementById('email').textContent = `Email: ${user.email}`;
-                    if (user.profilePicture) {
-                        document.getElementById('profile-pic').src = user.profilePicture;
-                    }
-                    accountTab.innerHTML = `
-                        <a href="account.html">My Account</a>
-                        <a href="logout.html">Logout</a>
-                    `;
-                } else {
-                    console.error("Error fetching profile info:", await response.text());
-                    accountTab.innerHTML = `
-                        <a href="login.html">Login</a>
-                        <a href="register.html">Register</a>
-                    `;
-                }
-            } catch (error) {
-                console.error("Error loading profile info:", error);
-                accountTab.innerHTML = `
-                    <a href="login.html">Login</a>
-                    <a href="register.html">Register</a>
-                `;
-            }
-        }
-
-        // Call the function on page load
-        document.addEventListener('DOMContentLoaded', loadProfileInfo);
-    </script>
+    <!-- Scripts -->
+    <script src="index_script.js"></script>
 </body>
 </html>
