Remove carousel arrows, fix smooth transitions, and ensure automatic slideshow

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,15 +57,35 @@
                 </div>
                 <div class="carousel-item">
                     <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail">
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail">
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="images/ultramarathon_images/download4_ultramarathon.jpg" alt="Desert Trail">
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="images/ultramarathon_images/download5_ultramarathon.jpg" alt="Snowy Trail">
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
                 </div>
             </div>
         </div>
