--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/ultramarathon_images/download4_ultramarathon.jpg" alt="Desert Trail">
+                    <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail">
                     <div class="carousel-overlay">
                         <h1>Welcome to Ultramarathon Connect</h1>
                         <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/ultramarathon_images/download5_ultramarathon.jpg" alt="Snowy Trail">
+                    <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail">
                     <div class="carousel-overlay">
                         <h1>Welcome to Ultramarathon Connect</h1>
                         <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
