change of filename

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,7 +115,7 @@
         <p>&copy; 2024 Ultramarathon Finder. All rights reserved.</p>
         <p>
             <a href="privacy.html">Privacy Policy</a> | 
-            <a href="terms.html">Terms of Service</a> |  
+            <a href="termsofservice.html">Terms of Service</a> |  
             <a href="faq.html">FAQ</a>
         </p>
     </footer>
