Update footer on all HTML pages + new contact.html

--- a/frontend/gear_forum.html
+++ b/frontend/gear_forum.html
@@ -44,15 +44,16 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Ultramarathon Connect. All rights reserved.</p>
-        <p>
-            <a href="contact.html">Contact Us</a> | 
-            <a href="privacy.html">Privacy Policy</a> | 
-            <a href="terms.html">Terms of Service</a> | 
-            <a href="about.html">About Us</a> | 
-            <a href="faq.html">FAQ</a>
-        </p>
+    <!-- ✅ Updated Footer -->
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
     <script src="gear_forum.js"></script>
