--- a/frontend/community.html
+++ b/frontend/community.html
@@ -77,8 +77,7 @@
         <p>
             <a href="contact.html">Contact Us</a> | 
             <a href="privacy.html">Privacy Policy</a> | 
-            <a href="terms.html">Terms of Service</a> | 
-            <a href="about.html">About Us</a> | 
+            <a href="termsofservice.html">Terms of Service</a> | 
             <a href="faq.html">FAQ</a>
         </p>
     </footer>
