--- a/frontend/index.html
+++ b/frontend/index.html
@@ -110,14 +110,16 @@
         </section>
     </main>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2024 Ultramarathon Finder. All rights reserved.</p>
-        <p>
-            <a href="privacy.html">Privacy Policy</a> | 
-            <a href="termsofservice.html">Terms of Service</a> |  
-            <a href="faq.html">FAQ</a>
-        </p>
+    <!-- ✅ Updated Footer Section -->
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
     <!-- Scripts -->
