--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -23,7 +23,7 @@
     </header>
 
     <!-- Main Contact Form -->
-    <main style="padding: 40px; max-width: 700px; margin: auto; text-align: center;">
+    <main style="padding: 40px; padding-top: 120px; max-width: 700px; margin: auto; text-align: center;">
         <h1>Contact Us</h1>
         <p>Have a question, suggestion, or just want to say hi? We'd love to hear from you!</p>
         <form>
@@ -34,15 +34,15 @@
         </form>
     </main>
 
-    <!-- Footer (universal) -->
-    <footer style="background-color: #2c2c2c; color: white; padding: 20px 0; text-align: center;">
-        <p style="margin: 0;">© 2024 Ultramarathon Connect. All rights reserved.</p>
-        <div style="margin-top: 10px;">
-            <a href="contact.html" style="color: orange; margin: 0 10px;">Contact Us</a> |
-            <a href="privacy.html" style="color: orange; margin: 0 10px;">Privacy Policy</a> |
-            <a href="termsofservice.html" style="color: orange; margin: 0 10px;">Terms of Service</a> |
-            <a href="faq.html" style="color: orange; margin: 0 10px;">FAQ</a>
+    <!-- Footer -->
+    <footer>
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a>
         </div>
+        <p class="footer-copy">&copy; 2024 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 </body>
 </html>
