--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -26,23 +26,56 @@
     <main style="padding: 40px; padding-top: 120px; max-width: 700px; margin: auto; text-align: center;">
         <h1>Contact Us</h1>
         <p>Have a question, suggestion, or just want to say hi? We'd love to hear from you!</p>
-        <form>
-            <input type="text" placeholder="Your Name" required style="width: 100%; padding: 10px; margin: 10px 0;">
-            <input type="email" placeholder="Your Email" required style="width: 100%; padding: 10px; margin: 10px 0;">
-            <textarea placeholder="Your Message" rows="6" required style="width: 100%; padding: 10px; margin: 10px 0;"></textarea>
+        <form id="contactForm">
+            <input type="text" id="name" placeholder="Your Name" required style="width: 100%; padding: 10px; margin: 10px 0;">
+            <input type="email" id="email" placeholder="Your Email" required style="width: 100%; padding: 10px; margin: 10px 0;">
+            <textarea id="message" placeholder="Your Message" rows="6" required style="width: 100%; padding: 10px; margin: 10px 0;"></textarea>
             <button type="submit" style="background-color: orange; color: white; padding: 12px 24px; border: none; cursor: pointer;">Send Message</button>
+            <p id="responseMessage" style="margin-top: 10px;"></p>
         </form>
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="site-footer">
         <div class="footer-links">
             <a href="contact.html">Contact Us</a> |
             <a href="privacy.html">Privacy Policy</a> |
             <a href="termsofservice.html">Terms of Service</a> |
             <a href="faq.html">FAQ</a>
         </div>
-        <p class="footer-copy">&copy; 2024 Ultramarathon Connect. All rights reserved.</p>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
+
+    <script>
+        const form = document.getElementById("contactForm");
+        const responseMessage = document.getElementById("responseMessage");
+
+        form.addEventListener("submit", async (e) => {
+            e.preventDefault();
+
+            const name = document.getElementById("name").value.trim();
+            const email = document.getElementById("email").value.trim();
+            const message = document.getElementById("message").value.trim();
+
+            const response = await fetch("https://ultramarathon-finder-backend.onrender.com/api/contact/send", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({ name, email, message })
+            });
+
+            const result = await response.json();
+
+            if (response.ok) {
+                responseMessage.style.color = "green";
+                responseMessage.textContent = "Message sent successfully!";
+                form.reset();
+            } else {
+                responseMessage.style.color = "red";
+                responseMessage.textContent = result.message || "Failed to send message.";
+            }
+        });
+    </script>
 </body>
 </html>
