Update race directory styling and script for improved layout and distance pill display

--- a/frontend/race_directory.html
+++ b/frontend/race_directory.html
@@ -45,7 +45,7 @@
                 </select>
                 <button id="reset-filters">Reset Filters</button>
             </div>
-            <div id="race-list"></div>
+            <div id="race-list" class="race-grid"></div>
             <div id="pagination-controls" class="pagination-controls"></div>
         </section>
     </main>
