--- a/frontend/race_directory.html
+++ b/frontend/race_directory.html
@@ -1,66 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Race Directory - Ultramarathon Finder</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Race Directory - Ultramarathon Finder</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header class="sticky-header">
-        <div class="logo-container">
-            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+  <header class="sticky-header">
+    <div class="logo-container">
+      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+    </div>
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="race_directory.html">Race Directory</a></li>
+        <li class="dropdown">
+          <a href="community.html">Community</a>
+          <ul class="dropdown-menu">
+            <li><a href="gear_forum.html">Gear Forum</a></li>
+            <li><a href="race_experiences.html">Race Experiences</a></li>
+            <li><a href="training_tips.html">Training Tips Forum</a></li>
+          </ul>
+        </li>
+        <li id="account-tab"></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="directory-section">
+      <h2>Race Directory</h2>
+      <p>Explore our directory of ultramarathons around the world! Use filters to find races by distance, location, and other attributes.</p>
+
+      <div class="filter-layout">
+        <!-- Sidebar Filters -->
+        <aside class="filter-sidebar">
+          <input type="text" id="search-bar" placeholder="Search by name, location" />
+
+          <h4>Distance Range</h4>
+          <label><input type="checkbox" class="distance-range" value="26-40"> 26–40 mi</label>
+          <label><input type="checkbox" class="distance-range" value="41-60"> 41–60 mi</label>
+          <label><input type="checkbox" class="distance-range" value="61-90"> 61–90 mi</label>
+          <label><input type="checkbox" class="distance-range" value="91-110"> 91–110 mi</label>
+          <label><input type="checkbox" class="distance-range" value="110+"> 110 mi +</label>
+
+          <h4>Duration</h4>
+          <label><input type="checkbox" class="duration-range" value="<7"> &lt; 7 hrs</label>
+          <label><input type="checkbox" class="duration-range" value="7-12"> 7–12 hrs</label>
+          <label><input type="checkbox" class="duration-range" value="13-24"> 13–24 hrs</label>
+          <label><input type="checkbox" class="duration-range" value="25-72"> 25–72 hrs</label>
+          <label><input type="checkbox" class="duration-range" value=">73"> &gt; 73 hrs</label>
+          <label><input type="checkbox" class="duration-range" value="Backyard"> Backyard</label>
+
+          <h4>Month</h4>
+          <select id="month-filter">
+            <option value="">All Months</option>
+            <option value="January">January</option>
+            <option value="February">February</option>
+            <option value="March">March</option>
+            <option value="April">April</option>
+            <option value="May">May</option>
+            <option value="June">June</option>
+            <option value="July">July</option>
+            <option value="August">August</option>
+            <option value="September">September</option>
+            <option value="October">October</option>
+            <option value="November">November</option>
+            <option value="December">December</option>
+          </select>
+
+          <h4>Region</h4>
+          <select id="region-filter">
+            <option value="">All Regions</option>
+            <option value="North America">North America</option>
+            <option value="South America">South America</option>
+            <option value="Europe">Europe</option>
+            <option value="Africa">Africa</option>
+            <option value="Asia">Asia</option>
+            <option value="Australia">Australia</option>
+            <option value="Antarctica">Antarctica</option>
+          </select>
+
+          <button id="reset-filters">Reset Filters</button>
+        </aside>
+
+        <!-- Race Results Grid -->
+        <div class="race-grid">
+          <div id="race-list"></div>
+          <div id="pagination-controls" class="pagination-controls"></div>
         </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="race_directory.html">Race Directory</a></li>
-                <li class="dropdown">
-                    <a href="community.html">Community</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="gear_forum.html">Gear Forum</a></li>
-                        <li><a href="race_experiences.html">Race Experiences</a></li>
-                        <li><a href="training_tips.html">Training Tips Forum</a></li>
-                    </ul>
-                </li>
-                <li id="account-tab"></li>
-            </ul>
-        </nav>
-    </header>
+      </div>
+    </section>
+  </main>
 
-    <main>
-        <section class="directory-section">
-            <h2>Race Directory</h2>
-            <p>Explore our directory of ultramarathons around the world! Use filters to find races by distance, location, and other attributes.</p>
-            <div class="filters">
-                <input type="text" id="search-bar" placeholder="Search by name, location">
-                <select id="distance-filter">
-                    <option value="">All Distances</option>
-                    <option value="50k">50K</option>
-                    <option value="100k">100K</option>
-                    <option value="50 miles">50 miles</option>
-                    <option value="100 miles">100 miles</option>
-                    <option value="150 miles">150 miles</option>
-                    <option value="200 miles">200 miles</option>
-                </select>
-                <button id="reset-filters">Reset Filters</button>
-            </div>
-            <div id="race-list" class="race-grid"></div>
-            <div id="pagination-controls" class="pagination-controls"></div>
-        </section>
-    </main>
+  <footer class="site-footer">
+    <div class="footer-links">
+      <a href="contact.html">Contact Us</a> |
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="termsofservice.html">Terms of Service</a> |
+      <a href="faq.html">FAQ</a> |
+      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+    </div>
+    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+  </footer>
 
-    <footer class="site-footer">
-        <div class="footer-links">
-            <a href="contact.html">Contact Us</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="termsofservice.html">Terms of Service</a> |
-            <a href="faq.html">FAQ</a> |
-            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-        </div>
-        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-    </footer>
-
-    <script src="race_directory_script.js"></script>
+  <script src="race_directory_script.js"></script>
 </body>
 </html>
