--- a/frontend/race_directory.html
+++ b/frontend/race_directory.html
@@ -15,14 +15,7 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="race_directory.html">Race Directory</a></li>
-        <li class="dropdown">
-          <a href="community.html">Community</a>
-          <ul class="dropdown-menu">
-            <li><a href="gear_forum.html">Gear Forum</a></li>
-            <li><a href="race_experiences.html">Race Experiences</a></li>
-            <li><a href="training_tips.html">Training Tips Forum</a></li>
-          </ul>
-        </li>
+        <li><a href="forum.html">Runner Community</a></li>
         <li id="account-tab"></li>
       </ul>
     </nav>
