--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -15,7 +15,7 @@
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
-                <li><a href="community.html">Community</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
                 <li><a href="account.html">My Account</a></li>
                 <li><a href="logout.html">Logout</a></li>
             </ul>
