--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -16,7 +16,7 @@
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
-                <li><a href="community.html">Community</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
