--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,128 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ultramarathon Connect</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ultramarathon Connect</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header Section -->
-    <header class="sticky-header">
-        <div class="logo-container">
-            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+  <!-- Header Section -->
+  <header class="sticky-header">
+    <div class="logo-container">
+      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+    </div>
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="race_directory.html">Race Directory</a></li>
+        <li><a href="forum.html">Runner Community</a></li>
+        <li id="account-tab"></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Section -->
+  <main>
+    <!-- Profile Section -->
+    <section class="profile-container">
+      <div class="account-card">
+        <div class="profile-section">
+          <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture" class="profile-pic" onerror="this.src='images/default-profile.png'">
         </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="race_directory.html">Race Directory</a></li>
-                <li class="dropdown">
-                    <a href="community.html">Community</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="gear_forum.html">Gear Forum</a></li>
-                        <li><a href="race_experiences.html">Race Experiences</a></li>
-                        <li><a href="training_tips.html">Training Tips Forum</a></li>
-                    </ul>
-                </li>
-                <li id="account-tab"></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Main Section -->
-    <main>
-        <!-- Profile Section -->
-        <section class="profile-container">
-            <div class="account-card">
-                <div class="profile-section">
-                    <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture" class="profile-pic" onerror="this.src='images/default-profile.png'">
-                </div>
-                <div class="info-section">
-                    <h3 id="username">Welcome, User!</h3>
-                    <p id="email"><strong>Email:</strong> user@example.com</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Carousel Section -->
-        <div class="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run">
-                    <div class="carousel-overlay">
-                        <h1>Welcome to Ultramarathon Connect</h1>
-                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail">
-                    <div class="carousel-overlay">
-                        <h1>Welcome to Ultramarathon Connect</h1>
-                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail">
-                    <div class="carousel-overlay">
-                        <h1>Welcome to Ultramarathon Connect</h1>
-                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail">
-                    <div class="carousel-overlay">
-                        <h1>Welcome to Ultramarathon Connect</h1>
-                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail">
-                    <div class="carousel-overlay">
-                        <h1>Welcome to Ultramarathon Connect</h1>
-                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-                    </div>
-                </div>
-            </div>
+        <div class="info-section">
+          <h3 id="username">Welcome, User!</h3>
+          <p id="email"><strong>Email:</strong> user@example.com</p>
         </div>
+      </div>
+    </section>
 
-        <!-- Features Section -->
-        <section class="features">
-            <div class="feature">
-                <h2>Find a Race</h2>
-                <p>Explore our comprehensive directory of ultramarathons by distance, location, and terrain.</p>
-                <button class="orange-btn" onclick="window.location.href='race_directory.html'">View Directory</button>
-            </div>
-            <div class="feature">
-                <h2>Join the Community</h2>
-                <p>Connect with fellow ultrarunners for training tips, race strategies, and more.</p>
-                <button class="orange-btn" onclick="window.location.href='community.html'">Explore the Community</button>
-            </div>
-            <div class="feature">
-                <h2>Training Tips</h2>
-                <p>Access expert advice on training, nutrition, and recovery for ultramarathons.</p>
-                <button class="orange-btn" onclick="window.location.href='training_tips.html'">Start Training</button>
-            </div>
-        </section>
-    </main>
-
-    <!-- ✅ Updated Footer Section -->
-    <footer class="site-footer">
-        <div class="footer-links">
-            <a href="contact.html">Contact Us</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="termsofservice.html">Terms of Service</a> |
-            <a href="faq.html">FAQ</a> |
-            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+    <!-- Carousel Section -->
+    <div class="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run">
+          <div class="carousel-overlay">
+            <h1>Welcome to Ultramarathon Connect</h1>
+            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+          </div>
         </div>
-        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-    </footer>
+        <div class="carousel-item">
+          <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail">
+          <div class="carousel-overlay">
+            <h1>Welcome to Ultramarathon Connect</h1>
+            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail">
+          <div class="carousel-overlay">
+            <h1>Welcome to Ultramarathon Connect</h1>
+            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail">
+          <div class="carousel-overlay">
+            <h1>Welcome to Ultramarathon Connect</h1>
+            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail">
+          <div class="carousel-overlay">
+            <h1>Welcome to Ultramarathon Connect</h1>
+            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <!-- Scripts -->
-    <script src="index_script.js"></script>
+    <!-- Features Section -->
+    <section class="features">
+      <div class="feature">
+        <h2>Find a Race</h2>
+        <p>Explore our comprehensive directory of ultramarathons by distance, location, and terrain.</p>
+        <button class="orange-btn" onclick="window.location.href='race_directory.html'">View Directory</button>
+      </div>
+      <div class="feature">
+        <h2>Runner Community</h2>
+        <p>Connect with fellow ultrarunners for training tips, race strategies, and meetups.</p>
+        <button class="orange-btn" onclick="window.location.href='forum.html'">Explore Runner Community</button>
+      </div>
+      <div class="feature">
+        <h2>Training Tips</h2>
+        <p>Access expert advice on training, nutrition, and recovery for ultramarathons.</p>
+        <button class="orange-btn" onclick="window.location.href='training_tips.html'">Start Training</button>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer Section -->
+  <footer class="site-footer">
+    <div class="footer-links">
+      <a href="contact.html">Contact Us</a> |
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="termsofservice.html">Terms of Service</a> |
+      <a href="faq.html">FAQ</a> |
+      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+    </div>
+    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="index_script.js"></script>
 </body>
 </html>
