--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Profile - Ultramarathon Finder</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="sticky-header">
         <div class="logo-container">
@@ -15,14 +17,7 @@
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
-                <li class="dropdown">
-                    <a href="community.html">Community</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="gear_forum.html">Gear Forum</a></li>
-                        <li><a href="race_experiences.html">Race Experiences</a></li>
-                        <li><a href="training_tips.html">Training Tips Forum</a></li>
-                    </ul>
-                </li>
+                <li><a href="forum.html">Runner Community</a></li>
                 <li id="account-tab"></li>
             </ul>
         </nav>
@@ -43,10 +38,10 @@
             <form id="profile-form">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
-                
+
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
-                
+
                 <button type="submit" class="orange-btn">Save Changes</button>
             </form>
 
@@ -134,9 +129,6 @@
             formData.append('profilePicture', profilePicture);
 
             try {
-                console.log("Uploading file:", profilePicture.name);
-                console.log("Token sent with request:", token); // Debugging log
-
                 const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
                     method: 'POST',
                     headers: {
@@ -151,7 +143,6 @@
                     alert("Profile picture uploaded successfully!");
                 } else {
                     const error = await response.json();
-                    console.error("Error response:", error);
                     alert("Error uploading profile picture: " + (error.message || "Unknown error"));
                 }
             } catch (error) {
@@ -187,7 +178,6 @@
                     window.location.href = "account.html";
                 } else {
                     const errorData = await response.json();
-                    console.error("Error response:", errorData);
                     alert(errorData.message || "Error updating profile.");
                 }
             } catch (error) {
@@ -204,4 +194,5 @@
         loadProfile();
     </script>
 </body>
+
 </html>
