Redesigned forum layout and removed duplicate category sections

--- a/frontend/forum.html
+++ b/frontend/forum.html
@@ -75,28 +75,13 @@
       </form>
     </section>
 
-    <!-- Posts by Topic -->
+    <!-- Empty category anchors for JS to scroll to -->
     <section class="forum-sections">
-      <div class="forum-category" id="training-card">
-        <h3>🏋️ Training Tips</h3>
-        <div id="section-training"></div>
-      </div>
-      <div class="forum-category" id="gear-card">
-        <h3>🎒 Gear Recommendations</h3>
-        <div id="section-gear"></div>
-      </div>
-      <div class="forum-category" id="race-card">
-        <h3>🥇 Race Advice</h3>
-        <div id="section-race"></div>
-      </div>
-      <div class="forum-category" id="meetup-card">
-        <h3>🤝 Meetup Requests</h3>
-        <div id="section-meetup"></div>
-      </div>
-      <div class="forum-category" id="chat-card">
-        <h3>💬 General Chat</h3>
-        <div id="section-chat"></div>
-      </div>
+      <div id="section-training"></div>
+      <div id="section-gear"></div>
+      <div id="section-race"></div>
+      <div id="section-meetup"></div>
+      <div id="section-chat"></div>
     </section>
   </main>
 
