Update forum layout, comments, and profile image fixes

--- a/frontend/comments.html
+++ b/frontend/comments.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comments - Ultramarathon Connect</title>
+  <title>Post & Replies - Ultramarathon Connect</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,15 +23,14 @@
   </header>
 
   <main class="forum-wrapper">
-    <h1 class="forum-heading">Post & Comments</h1>
+    <h1 class="forum-heading">Post & Replies</h1>
     <section id="post-details"></section>
 
     <section id="comments-container">
-      <h3>Comments</h3>
       <div id="comment-list"></div>
 
       <form id="comment-form">
-        <textarea id="comment-content" placeholder="Write your comment..." required></textarea>
+        <textarea id="comment-content" placeholder="Write your reply..." required></textarea>
         <button type="submit">Reply</button>
         <p id="comment-error" class="error-message"></p>
       </form>
@@ -52,3 +51,4 @@
   <script src="comments_script.js"></script>
 </body>
 </html>
+
