--- a/frontend/forum.html
+++ b/frontend/forum.html
@@ -77,8 +77,8 @@
 
     <!-- Sorting Controls -->
     <section class="sort-section">
-      <label for="sort-select">Sort by:</label>
-      <select id="sort-select">
+      <label for="sort-toggle">Sort by:</label>
+      <select id="sort-toggle">
         <option value="latest">Latest</option>
         <option value="oldest">Oldest</option>
         <option value="topic">Topic</option>
@@ -89,23 +89,18 @@
     <section class="forum-sections">
       <div class="forum-category" id="section-training">
         <h3>🏋️ Training Tips</h3>
-        <div id="section-training-posts"></div>
       </div>
       <div class="forum-category" id="section-gear">
         <h3>🎒 Gear Recommendations</h3>
-        <div id="section-gear-posts"></div>
       </div>
       <div class="forum-category" id="section-race">
         <h3>🥇 Race Advice</h3>
-        <div id="section-race-posts"></div>
       </div>
       <div class="forum-category" id="section-meetup">
         <h3>🤝 Meetup Requests</h3>
-        <div id="section-meetup-posts"></div>
       </div>
       <div class="forum-category" id="section-chat">
         <h3>💬 General Chat</h3>
-        <div id="section-chat-posts"></div>
       </div>
     </section>
   </main>
