Fix map visibility and center View All Posts button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,7 @@
     <!-- Race Map Preview - Moved Up -->
     <section class="map-preview">
       <h2>Explore Upcoming Races</h2>
-      <iframe src="https://www.google.com/maps/d/embed?mid=1tkO5zTf7Xx13CvVGnXlBTc4hxkI7Nco&ehbc=2E312F" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1b7OBFDRHZDK0TskQUO3z-BowXM3CPcIA&ehbc=2E312F" width="640" height="480"></iframe>
       <button class="orange-btn" onclick="window.location.href='race_directory.html'">Browse Full Directory</button>
     </section>
 
