Implement UltraSignup-style login/logout header and dropdown

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
                 <li><a href="forum.html">Runner Community</a></li>
-                <li id="account-tab"></li>
+                <li id="account-tab" class="auth-tab"></li>
             </ul>
         </nav>
     </header>
@@ -78,7 +78,8 @@
         <section class="map-preview">
             <h2>Explore Upcoming Races</h2>
             <div id="race-map"></div>
-            <button class="orange-btn" onclick="window.location.href='race_directory.html'">Browse Full Directory</button>
+            <button class="orange-btn" onclick="window.location.href='race_directory.html'">Browse Full
+                Directory</button>
         </section>
 
         <!-- Recent Forum Posts - Now Below Map -->
