--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,112 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Ultramarathon Connect</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Ultramarathon Connect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header class="sticky-header">
-    <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="forum.html">Runner Community</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header class="sticky-header">
+        <div class="logo-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <div class="form-container">
-      <div class="form-card">
-        <h2>Login to Your Account</h2>
-        <form id="login-form">
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
-          </div>
-          
-          <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
-          </div>
-          
-          <button type="submit" class="orange-btn">Login</button>
-        </form>
-        <p id="login-message" class="error-message"></p>
-        <p><a href="forgot-password.html" class="forgot-password">Forgot Password?</a></p>
-        <p>Don't have an account? <a href="register.html">Register here</a>.</p>
-      </div>
-    </div>
-  </main>
+    <main>
+        <div class="form-container">
+            <div class="form-card">
+                <h2>Login to Your Account</h2>
+                <form id="login-form">
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    </div>
 
-  <footer class="site-footer">
-    <div class="footer-links">
-      <a href="contact.html">Contact Us</a> |
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="termsofservice.html">Terms of Service</a> |
-      <a href="faq.html">FAQ</a> |
-      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-    </div>
-    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-  </footer>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                    </div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const token = localStorage.getItem("token");
-      if (token) {
-        window.location.href = "index.html";
-      }
-    });
+                    <button type="submit" class="orange-btn">Login</button>
+                </form>
+                <p id="login-message" class="error-message"></p>
+                <p><a href="forgot-password.html" class="forgot-password">Forgot Password?</a></p>
+                <p>Don't have an account? <a href="register.html"><strong>Create one for free!</strong></a></p>
+            </div>
+        </div>
+    </main>
 
-    document.getElementById('login-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value.trim();
-      const loginMessage = document.getElementById('login-message');
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+    </footer>
 
-      loginMessage.textContent = '';
-      loginMessage.className = '';
-
-      if (!email || !password) {
-        loginMessage.textContent = 'Please fill in both fields.';
-        return;
-      }
-
-      try {
-        const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/login', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ email, password })
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const token = localStorage.getItem("token");
+            if (token) {
+                window.location.href = "index.html";
+            }
         });
 
-        const data = await response.json();
+        document.getElementById('login-form').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const email = document.getElementById('email').value.trim();
+            const password = document.getElementById('password').value.trim();
+            const loginMessage = document.getElementById('login-message');
 
-        if (response.ok && data.token) {
-          localStorage.setItem('token', data.token);
-          loginMessage.textContent = 'Login successful!';
-          loginMessage.classList.add('success-message');
+            loginMessage.textContent = '';
+            loginMessage.className = '';
 
-          setTimeout(() => {
-            window.location.href = 'index.html';
-          }, 1500);
-        } else {
-          loginMessage.textContent = data.message || 'Invalid login credentials.';
-          loginMessage.classList.add('error-message');
-        }
-      } catch (error) {
-        console.error("Login error:", error);
-        loginMessage.textContent = 'Error: Could not connect to the server.';
-        loginMessage.classList.add('error-message');
-      }
-    });
-  </script>
+            if (!email || !password) {
+                loginMessage.textContent = 'Please fill in both fields.';
+                return;
+            }
+
+            try {
+                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ email, password })
+                });
+
+                const data = await response.json();
+
+                if (response.ok && data.token) {
+                    localStorage.setItem('token', data.token);
+                    loginMessage.textContent = 'Login successful!';
+                    loginMessage.classList.add('success-message');
+
+                    setTimeout(() => {
+                        window.location.href = 'index.html';
+                    }, 1500);
+                } else {
+                    loginMessage.textContent = data.message || 'Invalid login credentials.';
+                    loginMessage.classList.add('error-message');
+                }
+            } catch (error) {
+                console.error("Login error:", error);
+                loginMessage.textContent = 'Error: Could not connect to the server.';
+                loginMessage.classList.add('error-message');
+            }
+        });
+    </script>
 </body>
+
 </html>
