Update JS for inactivity logout and clean logout behavior

--- a/frontend/forum.html
+++ b/frontend/forum.html
@@ -19,7 +19,7 @@
         <li><a href="race_directory.html">Race Directory</a></li>
         <li><a href="articles.html">Articles</a></li>
         <li><a href="forum.html">Forum</a></li>
-        <li id="account-tab"></li>
+        <li id="account-tab" class="auth-tab"></li>
       </ul>
     </nav>
   </header>
