--- a/frontend/account.html
+++ b/frontend/account.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
                 <li><a href="forum.html">Runner Community</a></li>
-                <li id="account-tab"></li>
+                <li id="account-tab" class="auth-tab"></li>
             </ul>
         </nav>
     </header>
