--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
                 <li><a href="forum.html">Runner Community</a></li>
-                <li><a href="account.html">My Account</a></li>
+                <li id="account-tab" class="auth-tab"></li>
                 <li><a href="logout.html">Logout</a></li>
             </ul>
         </nav>
