Fix terms of service page header layout and session tab

--- a/frontend/termsofservice.html
+++ b/frontend/termsofservice.html
@@ -17,13 +17,13 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="race_directory.html">Race Directory</a></li>
         <li><a href="forum.html">Runner Community</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li id="account-tab" class="auth-tab"></li>
       </ul>
     </nav>
   </header>
 
   <!-- Main Content Section -->
-  <main class="content-container">
+  <main class="content-container" style="padding: 40px;">
     <section class="terms-of-service">
       <h1>Terms of Service</h1>
       <p>Effective Date: January 25, 2025</p>
@@ -75,7 +75,7 @@
     <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
   </footer>
 
-  <!-- Scripts -->
-  <script src="script.js"></script>
+  <!-- Script to handle session state -->
+  <script src="index_script.js"></script>
 </body>
 </html>
