--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -17,7 +17,6 @@
                 <li><a href="race_directory.html">Race Directory</a></li>
                 <li><a href="forum.html">Runner Community</a></li>
                 <li id="account-tab" class="auth-tab"></li>
-                <li><a href="logout.html">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -77,5 +76,6 @@
             }
         });
     </script>
+    <script src="index_script.js"></script>
 </body>
 </html>
