--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
                 <li><a href="forum.html">Runner Community</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li id="account-tab" class="auth-tab"></li>
             </ul>
         </nav>
     </header>
@@ -73,7 +73,7 @@
         </section>
     </main>
 
-    <!-- Updated Footer Section -->
+    <!-- Footer Section -->
     <footer class="site-footer">
         <div class="footer-links">
             <a href="contact.html">Contact Us</a> |
@@ -86,6 +86,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="script.js"></script>
+    <script src="index_script.js"></script>
 </body>
 </html>
