--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header Section -->
+  <!-- Header -->
   <header class="sticky-header">
     <div class="logo-container">
       <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
@@ -17,60 +17,50 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="race_directory.html">Race Directory</a></li>
         <li><a href="forum.html">Runner Community</a></li>
+        <li id="account-tab" class="auth-tab"></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Main Content Section -->
-  <main class="content-container">
-    <section class="privacy-policy">
-      <h1>Privacy Policy</h1>
-      <p>Effective Date: January 25, 2025</p>
+  <!-- Main Content -->
+  <main class="content-container" style="padding: 40px;">
+    <h1>Privacy Policy</h1>
+    <p><strong>Effective Date:</strong> January 25, 2025</p>
 
-      <h2>1. Introduction</h2>
-      <p>Welcome to Ultramarathon Connect. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use our website.</p>
+    <h2>1. Introduction</h2>
+    <p>Welcome to Ultramarathon Connect. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use our website.</p>
 
-      <h2>2. Information We Collect</h2>
-      <ul>
-        <li><strong>Personal Information:</strong> When you register, we may collect your name, email address, and other personal details.</li>
-        <li><strong>Usage Data:</strong> We collect data about how you interact with our website, such as IP addresses, browser type, and pages visited.</li>
-        <li><strong>Cookies:</strong> We use cookies to enhance your experience on our website.</li>
-      </ul>
+    <h2>2. Information We Collect</h2>
+    <ul>
+      <li><strong>Personal Information:</strong> When you register, we may collect your name, email address, and other personal details.</li>
+      <li><strong>Usage Data:</strong> We collect data about how you interact with our website, such as IP addresses, browser type, and pages visited.</li>
+      <li><strong>Cookies:</strong> We use cookies to enhance your experience on our website.</li>
+    </ul>
 
-      <h2>3. How We Use Your Information</h2>
-      <p>We use your information to:</p>
-      <ul>
-        <li>Provide and manage our services.</li>
-        <li>Improve your user experience.</li>
-        <li>Send updates and promotional content (with your consent).</li>
-        <li>Ensure the security of our website.</li>
-      </ul>
+    <h2>3. How We Use Your Information</h2>
+    <p>We use your information to:</p>
+    <ul>
+      <li>Provide and manage our services.</li>
+      <li>Improve your user experience.</li>
+      <li>Send updates and promotional content (with your consent).</li>
+      <li>Ensure the security of our website.</li>
+    </ul>
 
-      <h2>4. Sharing Your Information</h2>
-      <p>We will never sell your personal information. We may share your information with:</p>
-      <ul>
-        <li>Service providers who help us operate our website.</li>
-        <li>Authorities, if required by law or to protect our rights.</li>
-      </ul>
+    <h2>4. Sharing Your Information</h2>
+    <p>We will never sell your personal information. We may share your information with:</p>
+    <ul>
+      <li>Service providers who help us operate our website.</li>
+      <li>Authorities, if required by law or to protect our rights.</li>
+    </ul>
 
-      <h2>5. Your Rights</h2>
-      <p>You have the right to:</p>
-      <ul>
-        <li>Access, update, or delete your personal information.</li>
-        <li>Opt out of marketing communications.</li>
-        <li>Disable cookies through your browser settings.</li>
-      </ul>
+    <h2>5. Your Rights</h2>
+    <p>You have the right to access, correct, or delete your personal data. You may also request a copy of the data we have collected about you.</p>
 
-      <h2>6. Security</h2>
-      <p>We use reasonable measures to protect your information, but no online service can guarantee 100% security.</p>
+    <h2>6. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with the updated date.</p>
 
-      <h2>7. Changes to This Privacy Policy</h2>
-      <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated effective date.</p>
-
-      <h2>8. Contact Us</h2>
-      <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-      <p>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></p>
-    </section>
+    <h2>7. Contact Us</h2>
+    <p>If you have questions about this Privacy Policy, please contact us at <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a>.</p>
   </main>
 
   <!-- Footer -->
@@ -85,7 +75,7 @@
     <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
   </footer>
 
-  <!-- Scripts -->
-  <script src="script.js"></script>
+  <!-- Session / Header Script -->
+  <script src="index_script.js"></script>
 </body>
 </html>
