--- a/frontend/account.html
+++ b/frontend/account.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Account - Ultramarathon Finder</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="alanai_chatbot/chat-widget.css">
 </head>
 
 <body>
@@ -45,6 +46,16 @@
             </div>
         </section>
     </main>
+
+    <!-- Alan Chat Widget -->
+    <div id="alan-bubble">💬</div>
+    <div id="alan-window">
+        <div id="alan-messages"></div>
+        <form id="alan-form">
+            <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
+            <button type="submit">Send</button>
+        </form>
+    </div>
 
     <footer class="site-footer">
         <div class="footer-links">
@@ -146,6 +157,8 @@
             fetchAccountInfo();
         });
     </script>
+
+    <script src="alanai_chatbot/alan.js"></script>
 </body>
 
 </html>
