--- a/frontend/race_directory.html
+++ b/frontend/race_directory.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Race Directory - Ultramarathon Finder</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
 </head>
 
 <body>
@@ -97,6 +98,16 @@
         </section>
     </main>
 
+    <!-- Alan Chat Widget -->
+    <div id="alan-bubble">💬</div>
+    <div id="alan-window">
+        <div id="alan-messages"></div>
+        <form id="alan-form">
+            <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
+            <button type="submit">Send</button>
+        </form>
+    </div>
+
     <footer class="site-footer">
         <div class="footer-links">
             <a href="contact.html">Contact Us</a> |
@@ -110,6 +121,7 @@
 
     <script src="race_directory_script.js"></script>
     <script src="index_script.js"></script>
+    <script src="alanai_chatbot/alan.js"></script>
 </body>
 
 </html>
