🔧 Fix redirect URI to point to backend for Strava OAuth

--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -62,7 +62,7 @@
 
     <script>
         const clientId = 162687;
-        const redirectUri = window.location.origin + '/strava-auth';
+        const redirectUri = 'https://ultramarathon-finder-backend.onrender.com/strava-auth';
 
         document.getElementById("connect-strava").addEventListener("click", () => {
             const scope = 'activity:read_all';
